--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,13 +7,9 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{{ encore_entry_script_tags('app')}} <script src="login.js"></script>{% endblock %}
+        {% block javascripts %}{{ encore_entry_script_tags('app')}}{% endblock %}
         <form  method="post" action="" id="ajax_form">
-            <p><strong>Логин:</strong>
-                <input maxlength="25" size="40" id="login" name = "login"></p>
-            <p><strong>Пароль:</strong>
-                <input type="password" maxlength="25" size="40" id="password" name = "password"></p>
-            <input type="button" id="btn" value="Войти" />
+            <input type="button" id="btn" value="Вы успешно вошли! Скоро тут(может быть) появится рабочее приложение!" />
         </form>
     </body>
 </html>
