--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         {% block body %}{% endblock %}
         {% block javascripts %}{{ encore_entry_script_tags('base')}} {% endblock %}
         <form  method="post" action="" id="ajax_form">
-            <input type="button" id="btn" value="Вы успешно вошли! Скоро тут(может быть) появится рабочее приложение!" />
+            <input type="button" id="btn" value="Скоро тут(может быть) появится рабочее приложение!" />
         </form>
     </body>
 </html>
