Design by Evngeniy

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,13 +3,55 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets  %}
+        <link rel="stylesheet" href="/asset/css/css.css">
+        {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{{ encore_entry_script_tags('base')}} {% endblock %}
-        <form  method="post" action="" id="ajax_form">
-            <input type="button" id="btn" value="Скоро тут(может быть) появится рабочее приложение!" />
-        </form>
+    <div class="wrapper">
+
+   <div class="pm">
+       Подразделение
+       <div>Я смурфик внутри</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+       <div>2</div>
+
+   </div>
+
+    <div class="light">
+        Мероприятие
+        <div>А я смурфик снаружиfffffffffffffffffffffffff fffffffffffffffffffff fffffffffffffff fffffffffffffffffffffffffffff fffffffffffffffffffffff fffffffff fffffffffffffffffffffffffff</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+        <div>2</div>
+
+    </div>
+
+
+
+
+    </div>
+
+
     </body>
 </html>
