--- a/public/asset/css/css1.css
+++ b/public/asset/css/css1.css
@@ -1,106 +1,54 @@
-.wrapper{
-    display: grid;
-    grid-column-gap: 4em;
-    height: 100vh;
-
-
-}
 body{
-    background-color: #4A76A8;
+    background-color: #2ca8c6;
 }
-.wrapper > section{
-    padding: 1em;
-    background-color: #EDEEF0;
-    border-radius: 7px;
-    height: 100%;
-
-
+a{
+    color: #fff;
 }
-.wrapper > section.light{
-    background-color: #edeef0;
-    border-radius: 1px;
-    height: 100%;
-    padding-top: -20%;
-    padding-left: -20%;
-
-
+a:hover{
+    text-decoration: none;
 }
-.wrapper > section.pm{
-    display: grid;
-    grid-auto-rows: minmax(30px, auto);
-    height: 100%;
-    padding-left: 530px;
-
-
-
+.container{
+    width: 450px;
+    height: 500px;
+    background-color: rgb(24, 33, 52);
+    margin: 250px auto 0 auto;
+    text-align: center;
+    box-shadow: 0 -5px 0 #3adbfd;
+    border-radius: 0 0 10px 10px ;
 }
-.wrapper  section.pm div{
-    background-color: ghostwhite;
-    border-radius: 5px;
-    margin: 1px;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 120%;
-    color:#4A76A8 ;
-    width: 50%;
-    padding-left: 40px ;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.container img{
+    width: 120px;
+    height: 120px;
+    margin: -60px 0 30px 0;
+    border: 5px solid #1a394f;
+    border-radius: 50%;
+    box-shadow: 0 -5px 0 #3adbfd;
 
 
 
 }
-.wrapper > section.light{
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 50% 50%;
-    grid-auto-rows: minmax(20px, auto);
-    padding-left: 530px;
-    padding-right: 530px;
-
-
-
-
+input[type="text"], input[type="password"]{
+    width: 300px;
+    height: 50px;
+    font-size: 18px;
+    margin-bottom: 25px;
+    border-radius: 4px;
+    padding-left: 18px;
+}
+.dws-submit{
+    padding: 13px 30px;
+    margin: 5px 0 28px 0;
+    font-size: 15px;
+    color: #fff;
+    background-color: #2ca8c6;
+    border: none;
+    border-bottom:  4px solid #6ee9fd;
+    cursor: pointer;
 
 }
-.wrapper  section.light div {
-    background-color: ghostwhite;
-    border-radius: 5px;
-    margin: 1px;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 120%;
-    color: #4A76A8;
-    width: 50%;
-    padding-left: 40px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-
-}
-input[type=submit] {
-
-
-    background-color: #EDEEF0;
-    font-family: 'Times New Roman', Times, serif;
-    color: #4A76A8;
-    font-size: 20px;
-
-
-
-
-
-
-}
-input[type=reset] {
-
-
-
-    background-color: #EDEEF0;
-    font-family: 'Times New Roman', Times, serif;
-    color: #4A76A8;
-    font-size: 20px;
-    width: 100px;
+.dws-submit:hover{
+    transition: all 0.5s;
+    background: #fff;
+    color: #2c536c;
 
 }
